tests/macro_tests/tests/fail/invalid_rename.stderr
error: proc-macro derive panicked
 --> tests/fail/invalid_rename.rs:3:10
  |
3 | #[derive(FromMultipart)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: `"1"` is not a valid identifier
